# git-repo-name

./: Cargo.toml  LICENSE  Makefile  README.md  git-repo-name  git-repo-name.plugin.zsh  git-repo-name.sh  git-sync
.github/templates/: git_repo_name_tap_template.rb
.github/workflows/: create_gh_release.yml  release_packages.yml  run_tests.yml  test_install.yml  unit_tests.yml
shell/: git-repo-name.sh
src/: config.rs  fs.rs  git.rs  github.rs  lib.rs  main.rs  test_helpers.rs  types.rs
src/remotes/: file.rs  github.rs
src/remotes/file/: operations.rs  url.rs
src/remotes/github/: client.rs  operations.rs  url.rs
src/utils/: fs.rs
test/: config.bats  file_system.bats  git-sync.bats  github.bats  test_helper.bash  validation.bats
test/mocks/: curl_github-repo-rename
tests/: common.rs
