[package]
name = "git-repo-name"
version = "0.1.0"
edition = "2021"
authors = ["Petr Gazarov"]
description = "A tool to sync git repository names between remote and local"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
thiserror = "1.0"
git2 = "0.18"
anyhow = "1.0"
regex = "1.10"
rust-ini = "0.20"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
assert_fs = "1.0"
predicates = "3.0"
