[package]
name = "git-repo-name"
version = "0.1.0"
edition = "2021"
authors = ["Petr Gazarov"]
description = "A tool to sync git repository names between remote and local"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
thiserror = "2.0"
git2 = "0.20"
anyhow = "1.0"
regex = "1.11"
rust-ini = "0.21"
once_cell = "1.20"

[dev-dependencies]
tempfile = "3.16.0"
mockito = "1.6.1"
assert_fs = "1.1.2"
predicates = "3.1.3"
